--- a/public_html/assets/style/main.css
+++ b/public_html/assets/style/main.css
@@ -531,8 +531,12 @@ button.based {
     margin-left: 5px;
 }
 
+.slider-product .slick-arrow {
+    background-color: white;
+    top: -35px;
+}
+
 .slick-arrow {
-    background: white;
     font-size: 0px;
     border: none;
     outline: none;
@@ -540,7 +544,6 @@ button.based {
     height: 24px;
     cursor: pointer;
     position: absolute;
-    top: -35px;
 }
 .slick-prev {
     background-image: url("../img/arrow-left.svg");
@@ -814,4 +817,141 @@ ul.footer-menu {
     font-size: 14px;
     line-height: 24px;
     color: #000000;
+}
+.catalog-item-container {
+    display: grid;
+    grid-template-columns: 60% 37%;
+    gap: 32px;
+}
+.catalog-item-info-item {
+    border: 1px solid #CFC1C1;
+    box-sizing: border-box;
+    border-radius: 5px;
+    padding: 24px 40px 30px 32px;
+}
+.catalog-item-info-item h3 {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 24px;
+    color: #000000;
+    margin-bottom: 12px;
+}
+.catalog-item-info-item .content-list {
+    margin-bottom: 12px;
+    font-weight: 300;
+    font-size: 12px;
+    line-height: 18px;
+    color: #000000;
+    display: flex;
+}
+.catalog-item-info-item .content-list span {
+    display: block;
+    margin-right: 6px;
+}
+.catalog-item-info-item {
+    margin-bottom: 20px;
+}
+.catalog-item-content .main-slider img {
+    width: 100%;
+    display: block;
+    border-radius: 5px;
+}
+.catalog-item-content .main-slider {
+    margin-bottom: 16px;
+}
+.catalog-item-content .main-slider .slick-arrow {
+    background-color: transparent;
+    z-index: 5;
+    bottom: 10px;
+}
+.catalog-item-content .nav-slider img  {
+    width: 90%;
+    margin-right: 16px;
+    border-radius: 5px;
+}
+.catalog-item-slider-container {
+    margin-bottom: 32px;
+}
+
+.catalog-item-actions-container {
+    display: grid;
+    grid-template-columns: 40% 60%;
+    align-items: center;
+    margin-bottom: 32px;
+}
+.catalog-item-actions-container .price {
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 21px;
+    color: #000000;
+}
+.catalog-item-actions-container .count {
+    font-weight: 300;
+    font-size: 12px;
+    line-height: 14px;
+    color: #000000;
+}
+.catalog-item-actions {
+    display: flex;
+    margin-left: auto;
+}
+.catalog-item-actions button {
+    width: 115px;
+    text-align: center;
+    transition: all 0.35s ease-in-out;
+}
+.catalog-item-actions button:last-child {
+    margin-left: 10px;
+}
+.catalog-item-actions button:hover {
+    transform: translate(0px, -5px);
+}
+.catalog-item-desc-item {
+    margin-bottom: 32px;
+}
+.catalog-item-desc-item .label {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 24px;
+    color: #000000;
+    margin-bottom: 8px;
+}
+.catalog-item-desc-item .text {
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 24px;
+    color: #000000;
+}
+.property {
+    list-style: none;
+    padding-left: 0px;
+    margin: 0px;
+}
+.property li {
+    padding-bottom: 8px;
+    padding-top: 8px;
+    border-bottom: 1px solid #C4C4C4;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+}
+.property li span {
+    font-size: 14px;
+    line-height: 24px;
+    color: #000000;
+}
+.property li span.value {
+    justify-content: end;
+    display: grid;
+}
+.section-catalog-slider-bottom h2 {
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 28px;
+    color: #000000;
+    margin-bottom: 32px;
+}
+.section-catalog-slider-bottom {
+    position: relative;
+    margin-bottom: 80px;
 }
